*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,11 @@
 -----------------------------------------------------------------------------------------
+Data Crow version 3.12.1                                           Released on 2013-08-03
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Icons not shown for containers.
+
+-----------------------------------------------------------------------------------------
 Data Crow version 3.12                                             Released on 2013-08-03
 -----------------------------------------------------------------------------------------
 Poor version 3.11. It only took a couple of days and then it got replaced by version 3.12.
