--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -7,6 +7,8 @@ Data Crow version 3.12.2                                           Released on 2
 
 [bugs]
 - !! Changes not saved using the quick filter on resource editor (?)
+- Filter not saved when value is empty.
+
 
 -----------------------------------------------------------------------------------------
 Data Crow version 3.12.1                                           Released on 2013-08-04
