*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow version 3.12.3                                           Released on 2013-09-xx
+Data Crow version 3.12.3                                           Released on 2013-09-07
 -----------------------------------------------------------------------------------------
 
 [Fixed]
