--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,21 @@
 -----------------------------------------------------------------------------------------
+Data Crow version 3.12.4                                           Released on 2013-09-07
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Error in the "Copy Module Wizard".
+- Ratings not displayed (depending on font settings) in the quick view panel.
+- Mobygames.com service was not working correctly after update of their site.
+- Cannot create new person-modules.
+- Upgrade error fixed for older versions.
+- Spelling errors (lend/lent)
+
+[Changed]
+- Rating star images have been changed.
+- Added ISBN 10 and ISBN 13 fields to the quick filter.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow version 3.12.3                                           Released on 2013-09-07
 -----------------------------------------------------------------------------------------
 
