*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow version 3.12.6                                           Released on 2013-10-09
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- One more small issue fixed when upgrading from an old version of Data Crow.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow version 3.12.5                                           Released on 2013-10-09
 -----------------------------------------------------------------------------------------
 "Too many versions!!!" - "You do not have to upgrade"
